--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,87 +1,38 @@
 version: 2
 
 jobs:
-  plan-apply:
+  test:
     working_directory: /tmp/project
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
     steps:
       - checkout
       - run:
           name: terraform init & plan
           command: |
-            terraform init -input=false
-            terraform plan -out tfapply -var-file variables.tfvars
+            echo "planning!!"
+            "a sample text" > file-lists.txt
       - persist_to_workspace:
           root: .
           paths:
             - .
 
-  apply:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+  workspace:
     steps:
       - attach_workspace:
           at: .
       - run:
-          name: terraform
+          name: is file there
           command: |
-            terraform apply -auto-approve tfapply
+            ls
       - persist_to_workspace:
           root: .
           paths:
             - .
-
-  plan-destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform create destroy plan
-          command: |
-            echo "start planning"
-            terraform plan -destroy -out tfdestroy -var-file variables.tfvars
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform destroy
-          command: |
-            terraform apply -auto-approve tfdestroy
 
 workflows:
   version: 2
   plan_approve_apply:
     jobs:
-      - hold-start:
-          type: approval
-      - plan-apply:
+      - test
+      - workspace:
           requires:
-            - hold-start
-      - hold-apply:
-          type: approval
-          requires:
-            - plan-apply
-      - apply:
-          requires:
-            - hold-apply
-      - plan-destroy:
-          requires:
-            - apply
-      - hold-destroy:
-          type: approval
-          requires:
-            - plan-destroy
-      - destroy:
-          requires:
-            - hold-destroy
+            - test
